--- a/index.html
+++ b/index.html
@@ -8,6 +8,64 @@
     <title>Olivarius</title>
 </head>
 <body>
+
+    <header>
+        <div><img src="img/Logoblanc.png" alt="logo"></div>
+        <nav>
+            <ul>
+                <li>Nouveau client</li>
+                <li>Départ client</li>
+            </ul> 
+        </nav>
+    </header>
+
+    <div>
+        <p>Accueil nouveau client</p> 
+        <hr>
+    </div>
+
+    <div>
+        <label for="firstname">Prénom</label>
+        <input type="text" name="firstname" id="firstname">
+
+        <label for="lastname">Nom</label>
+        <input type="text" name="lastname" id="lastname">
+
+        <label for="night">Nombre de nuits</label>
+        <input type="number" name="night" id="night">
+
+        <label for="room">Chambre</label>
+        <select name="room" id="room">
+            <option value="65">Chambre 1 personne</option>
+            <option value="89">Chambre 2 personnes</option>
+            <option value="139">Chambre 3 personnes</option>
+            <option value="189">Loft</option>
+        </select>
+
+        <p>Petit déjeuner</p>
+        <label for="yes">Oui</label>
+        <input type="radio" name = "breakfast" id="yes">
+        <label for="no">Non</label>
+        <input type="radio" name = "breakfast" id="no">
+
+        <button>Enregistrer le client</button>    
+    </div>
+
+    <div>
+        <p>Départ client</p>
+        <hr>
+    </div>
+
+    <div>
+        <label for="firstname">Prénom</label>
+        <input type="text" name="firstname" id="firstname">
+
+        <label for="lastname">Nom</label>
+        <input type="text" name="lastname" id="lastname">
+
+        <button>Rechercher</button>
+    </div>
+    
     
 </body>
 </html>
