--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div><img src="img/Logoblanc.png" alt="logo"></div>
+        <div><img class="logo" src="img/Logoblanc.png" alt="logo"></div>
         <nav>
             <ul>
                 <li>Nouveau client</li>
@@ -51,17 +51,17 @@
         <button>Enregistrer le client</button>    
     </div>
 
-    <div>
+    <div class = depart>
         <p>Départ client</p>
         <hr>
     </div>
 
-    <div>
-        <label for="firstname">Prénom</label>
-        <input type="text" name="firstname" id="firstname">
+    <div class="formulaire2">
+        <label for="prenom">Prénom</label>
+        <input type="text" name="prenom" id="prenom">
 
-        <label for="lastname">Nom</label>
-        <input type="text" name="lastname" id="lastname">
+        <label for="nom">Nom</label>
+        <input type="text" name="nom" id="nom">
 
         <button>Rechercher</button>
     </div>
