--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div><img class="logo" src="img/Logoblanc.png" alt="logo"></div>
+        <div class="logo"><img src="img/Logoblanc.png" alt="logo"></div>
         <nav>
             <ul>
                 <li>Nouveau client</li>
@@ -22,7 +22,7 @@
     <main>
         <div class="arrivee">
             <div>
-                <p>Accueil nouveau client</p> 
+                <h2>Accueil nouveau client</h2> 
                 <hr color="#B99470" size="4">
             </div>
         </div>
@@ -54,12 +54,18 @@
                     </select>
                 </div>
 
-                <div>
+                <div class="field">
                     <p>Petit déjeuner</p>
-                    <input type="radio" name="breakfast" value="true" id="yes">
-                    <label for="yes">Oui</label>
-                    <input type="radio" name="breakfast" value="false" id="no">
-                    <label for="no">Non</label>
+                    <div class="breakfast">
+                        <div >
+                            <input type="radio" name="breakfast" value="true" id="yes">
+                            <label for="yes">Oui</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="breakfast" value="false" id="no">
+                            <label for="no">Non</label>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -68,7 +74,7 @@
 
         <div class = depart>
             <div class = departext>
-                <p>Départ client</p>
+                <h2>Départ client</h2>
                 <hr>
             </div>
         </div>
