--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </form>
 
         <div class = depart>
-            <div class = departext>
+            <div>
                 <p>Départ client</p>
                 <hr>
             </div>
