--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="logo"><img src="img/Logoblanc.png" alt="logo"></div>
         <nav>
             <ul>
-                <li>Nouveau client</li>
-                <li>Départ client</li>
+                <a href="#form1"><li>Nouveau client</li></a>
+                <a href="#form2"><li>Départ client</li></a>
             </ul> 
         </nav>
     </header>
