--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
     <header>
-        <div class="logo"><img src="img/Logoblanc.png" alt="logo"></div>
+        <div class="logo">
+            <img src="img/Logoblanc.png" alt="logo">
+        </div>
         <nav>
             <ul>
                 <li>Nouveau client</li>
@@ -23,7 +25,7 @@
         <div class="arrivee">
             <div>
                 <h2>Accueil nouveau client</h2> 
-                <hr color="#B99470" size="4">
+                <hr color="#B99470" size="5">
             </div>
         </div>
 
