--- a/index.html
+++ b/index.html
@@ -85,11 +85,17 @@
         </div>
 
         <form id="form2">
-            <label for="prenom">Prénom</label>
-            <input type="text" name="prenom" id="prenom">
-
-            <label for="nom">Nom</label>
-            <input type="text" name="nom" id="nom">
+            <div class="form2">
+                <div class="field">
+                    <label for="prenom">Prénom</label>
+                    <input type="text" name="prenom" id="prenom">
+                </div>
+                
+                <div class="field">
+                    <label for="nom">Nom</label>
+                    <input type="text" name="nom" id="nom">
+                </div>
+            </div>            
 
             <button>Rechercher</button>
         </form>
