--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
 
     <main>
         <div class="arrivee">
-            <div>
-                <h2>Accueil nouveau client</h2> 
-                <hr color="#B99470" size="5">
+            <div class="image">
+                <div>
+                    <h2>Accueil nouveau client</h2> 
+                    <hr color="#B99470" size="5">
+                </div>
             </div>
         </div>
+        
 
         <form id="form1">
             <div class="form1"> 
@@ -78,9 +81,11 @@
         </form>
 
         <div class="depart">
-            <div>
-                <h2>Départ client</h2>
-                <hr color="#B99470" size="4">
+            <div class="image">
+                <div class="image">
+                    <h2>Départ client</h2>
+                    <hr color="#B99470" size="4">
+                </div>
             </div>
         </div>
 
