HTML icons + CSS buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <script type="module" src="js/main.js" defer></script>
+    <script src="https://kit.fontawesome.com/477e17b079.js" crossorigin="anonymous"></script>
     <title>Olivarius</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
             <ul>
                 <a href="#form1"><li>Nouveau client</li></a>
                 <a href="#form2"><li>Départ client</li></a>
+                <a href=""><li>Effacer clients</li></a>
             </ul> 
         </nav>
     </header>
@@ -77,14 +79,17 @@
                 </div>
             </div>
 
-            <button>Enregistrer le client</button>    
+            <button>
+                <p>Enregistrer le client</p>
+                <i class="fa-solid fa-calendar"></i>
+            </button>    
         </form>
 
         <div class="depart">
             <div class="image">
                 <div class="image">
                     <h2>Départ client</h2>
-                    <hr color="#B99470" size="4">
+                    <hr color="#B99470" size="5">
                 </div>
             </div>
         </div>
@@ -102,7 +107,10 @@
                 </div>
             </div>            
 
-            <button>Rechercher</button>
+            <button>
+                <p>Rechercher</p>
+                <i class="fa-solid fa-user"></i>
+            </button>
         </form>
 
 
