ADDED clear localStorage button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul>
                 <a href="#form1"><li>Nouveau client</li></a>
                 <a href="#form2"><li>Départ client</li></a>
-                <a href=""><li>Effacer clients</li></a>
+                <a href="" class="clear"><li>Effacer clients</li></a>
             </ul> 
         </nav>
     </header>
